[metadata]
name = gym-tendulum
version = 0.0.1
author = Jesse Cranney
author_email = jesse.cranney@anu.edu.au
description = Simulation environment for tendulum
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jcranney/gym-tendulum
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    gym
    numpy
    scipy
    pygame
    pygame_recorder @ git+https://github.com/jcranney/pygame_recorder
include_package_data = True

